Fix horizontal scrollbar issue. Closes #186.

--- a/source/stylesheets/base.css
+++ b/source/stylesheets/base.css
@@ -336,6 +336,7 @@ padding-bottom: 30px;
   background: #F8F8F8;
   color: #548;
   margin: 20px -20px;
+  max-width: 100%;
 }
 
 .icon_wrapper {
@@ -766,16 +767,15 @@ h2.terms {
   .product-plan .feature .pull-right {
 	float: none;
   }
-  #headline,
-  #footer {
+  #headline {
     margin-left: -20px;
     margin-right: -20px;
-	padding: 20px;
+    padding: 20px;
   }
   #copywrite {
     margin-left: -20px;
     margin-right: -20px;
-	padding: 0 20px;
+    padding: 0 20px;
   }
 }
 
